--- a/SRC/ejemplo1.ipynb
+++ b/SRC/ejemplo1.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import datetime # Tipo de dato para fechas y horas\n",
+    "import pandas as pd # Manejo de datos tabulados\n",
+    "import numpy as np # Algebra Lineal y operaciones matematicas\n",
+    "import matplotlib.pyplot as plt # Graficos de datos\n",
+    "import seaborn as sns # Graficos estadisticos\n",
+    "import pandas_profiling as ppr # ?????????\n",
+    "#import geopandas as gpd # Pandas para datos geograficos (Mapas!!)\n",
+    "#from fitter import Fitter # Ajuste de distribuciones de probs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
