--- a/SRC/Co2 emission.ipynb
+++ b/SRC/Co2 emission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "7385"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,13 +217,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- # Preguntas generales\n",
+    "1. ### ¿Cuál es el grado de corelación entre la emision de Co2 y las otras variables?\n",
+    "1. ### ¿Cuál es la marca de auto con mayor número de unidades?\n",
+    "2. ### ¿Cuál es el tipo de combustible(Fuel Type) predominante en los autos FORD que tienen más emisiones de CO2?\n",
+    "\n",
+    "- # **Emisión de Co2 en vehículos**\n",
+    "1. ### ¿Cuálesson las marcas que tienen altas emisiones de Co2 en ciudad?\n",
+    "1. ### ¿Qué tipo de combustible usan los vehículos de la marca que tienen más emisiones de Co2 ?\n",
+    "- # Impuesto por huella de carbono\n",
+    "- ## Hipótesis: \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Trabajando con la variable Co2\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +249,7 @@
        "(0, 0.0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +277,7 @@
        "Name: CO2 Emissions(g/km), dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +313,7 @@
        "Name: CO2 Emissions(g/km), dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +406,7 @@
        "4  (95, 154]         Z      10"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +472,7 @@
        "Name: Engine Size(L), dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +514,7 @@
        "Name: Engine Size(L), dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +534,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,16 +564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x250ce883ac0>"
+       "<matplotlib.collections.PathCollection at 0x1f2eaff13d0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -579,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +609,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +640,7 @@
        "8"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +819,7 @@
        "CO2 Emissions(g/km)                          1.000000  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +938,7 @@
        "4  ACURA             3.5      41"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,26 +955,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- # Preguntas\n",
-    "1. ### ¿Cuál es la marca de auto con mayor número de unidades?\n",
-    "2. ### ¿Cuál es el tipo de combustible(Fuel Type) predominante en los autos FORD que tienen más emisiones de CO2?\n",
-    "\n",
-    "- # **Emisión de Co2 en vehículos**\n",
-    "1. ### ¿Cuálesson las marcas que tienen altas emisiones de Co2 en ciudad?\n",
-    "1. ### ¿Qué tipo de combustible los vehículos de la marca que tienen más emisiones de Co2 ?\n",
-    "1. ## Impuesto por huella de carbono\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Agrupando por Marca de auto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1011,7 @@
        "Name: Make, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1096,7 @@
        "4  (95, 154]       BENTLEY       0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1229,7 @@
        "[119 rows x 3 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1538,7 @@
        "[628 rows x 13 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1623,7 @@
        "4  (154, 212]         D       0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1753,7 @@
        "15  (270, 523]         Z      11"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1871,7 @@
        "4  (95, 154]         D         10       0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2082,7 +2085,7 @@
        "78  (270, 523]         Z          8       7"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,23 +2161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Summarize dataset: 100%|██████████| 20/20 [00:00<00:00, 308.52it/s, Completed]                                         \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:01<00:00,  1.72s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  4.85it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 501.47it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "profile2 = ppr.ProfileReport(extraer_ford, title='Pandas Profiling Report', minimal=True)\n",
-    "profile2.to_file('../Co2/Ford_Co2.html')"
+    "#Crear pandas profiling\n",
+    "#profile2 = ppr.ProfileReport(extraer_ford, title='Pandas Profiling Report', minimal=True)\n",
+    "#profile2.to_file('../Co2/Ford_Co2.html')"
    ]
   }
  ],
