--- a/SRC/Co2 emission.ipynb
+++ b/SRC/Co2 emission.ipynb
@@ -217,25 +217,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- # Preguntas generales\n",
-    "1. ### ¿Cuál es el grado de corelación entre la emision de Co2 y las otras variables?\n",
-    "1. ### ¿Cuál es la marca de auto con mayor número de unidades?\n",
-    "2. ### ¿Cuál es el tipo de combustible(Fuel Type) predominante en los autos FORD que tienen más emisiones de CO2?\n",
+    "- # Preguntas de exploración\n",
+    "1. ### ¿Cuales son los valores máximos y mínimos de emisión de Co2?\n",
+    "2. ### ¿Cuál es el grado de corelación entre la emision de Co2 y las otras variables?\n",
+    "3. ### ¿Cuál es la marca de auto con mayor número de unidades?\n",
     "\n",
-    "- # **Emisión de Co2 en vehículos**\n",
-    "1. ### ¿Cuálesson las marcas que tienen altas emisiones de Co2 en ciudad?\n",
-    "1. ### ¿Qué tipo de combustible usan los vehículos de la marca que tienen más emisiones de Co2 ?\n",
+    "\n",
+    "- # **Emisión de Co2 en vehículos marca Ford**\n",
+    "1. ### ¿Qué tipo de combustible usan los vehículos de la marca Ford?\n",
+    "2. ### ¿Cuál es el tipo de combustible(Fuel Type) predominante en los autos FORD que tienen más emisiones de CO2?\n",
     "- # Impuesto por huella de carbono\n",
-    "- ## Hipótesis: \n",
-    "\n"
+    "- ## Hipótesis: \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trabajando con la variable Co2\n",
-    " "
+    "### Respondiendo las preguntas generales \n",
+    " 1. ### ¿Cuales son los valores máximos y mínimos de emisión de Co2?"
    ]
   },
   {
@@ -284,6 +284,20 @@
    ],
    "source": [
     "df['CO2 Emissions(g/km)'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Se encontró que el valor mínimo es de 96(g/km) y el valor máximo es de 522(g/km)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Una vez encontrado los valores máximos y mínimos, también tenemos la desviación estándar con lo que procederemos a agrupar las unidades a 3 desviaciones estándar."
    ]
   },
   {
@@ -556,13 +570,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Correlación entre varibles y emisión de CO2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -651,6 +658,13 @@
     "       'Fuel Consumption Comb (mpg)', 'CO2 Emissions(g/km)']\n",
     "\n",
     "len(corr_matrix_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. ### ¿Cuál es el grado de corelación entre la emision de Co2 y las otras variables?"
    ]
   },
   {
@@ -864,6 +878,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Según lo encontrado, la mayor correlación (0.9195) se da entre el \"consumo de combustible en ciudad(Fuel Consumption City (L/100 km)) \" y las emisiones de CO2 (g/km)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. ¿Cuál es la marca de auto con mayor número de unidades?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -952,13 +980,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Agrupando por Marca de auto"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1019,6 +1040,13 @@
    "source": [
     "df_marca = df['Make'].value_counts()\n",
     "df_marca"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Aquí  se aprecia que la marca de autos con mayor unidades Ford, por lo que harémos un análisis de sus unidades."
    ]
   },
   {
@@ -1243,7 +1271,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Para FORD"
+    "- # **Emisión de Co2 en vehículos marca Ford**\n",
+    " ### 1. ¿Qué tipo de combustible usan los vehículos de la marca Ford?"
    ]
   },
   {
@@ -1764,6 +1793,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. ### ¿Cuál es el tipo de combustible(Fuel Type) predominante en los autos FORD que tienen más emisiones de CO2?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -2153,10 +2189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
+    "#import plotly.express as px\n",
+    "#import plotly.graph_objects as go\n",
     "\n",
-    "from plotly.subplots import make_subplots"
+    "#from plotly.subplots import make_subplots"
    ]
   },
   {
